added deckbuilder support

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- SEO and Accessibility Meta Tags -->
     <title>TCG League - One Piece Card Game Tournament Management</title>
-    <meta name="description" content="Create and manage One Piece Trading Card Game tournaments. Join leagues, build decks, and compete with players worldwide." />
+    <meta name="description" content="Create and manage One Piece Trading Card Game tournaments. Join leagues, build decks, and compete with players worldwide. Independent fan-made website not affiliated with Bandai." />
     <meta name="keywords" content="One Piece, TCG, Trading Card Game, Tournament, League, Deck Builder, Card Game" />
     <meta name="author" content="TCG League" />
     
